# bibtex-formatter

./: .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  test.bib
.github/workflows/: ci.yml
src/: error.rs  format.rs  lib.rs  main.rs  models.rs  parse.rs  token.rs
src/models/: entry.rs  mod.rs  tag.rs
tests/: cli_test.rs  snippets_test.rs
tests/snippets/: coalesce-multiline-content.in.bib  coalesce-multiline-content.out.bib  comment-nested-braces.in.bib  comment-nested-braces.out.bib  comment-travels-with-entry.in.bib  comment-travels-with-entry.out.bib  implicit-comments.in.bib  implicit-comments.out.bib  non-delimited-content.in.bib  non-delimited-content.out.bib  preserve-title-casing.in.bib  preserve-title-casing.out.bib  quotes-to-braces.in.bib  quotes-to-braces.out.bib  remove-comments.in.bib  remove-comments.out.bib  remove-duplicates.in.bib  remove-duplicates.out.bib  remove-empty-tags.in.bib  remove-empty-tags.out.bib  skip-sort-comments.in.bib  skip-sort-comments.out.bib  skip-sort-spacing.in.bib  skip-sort-spacing.out.bib  sort-comments-without-format.out.bib  sort-entries.in.bib  sort-entries.out.bib  sort-preamble-first.in.bib  sort-preamble-first.out.bib  sort-tags.in.bib  sort-tags.out.bib  string-concat.in.bib  string-concat.out.bib  string-entries.in.bib  string-entries.out.bib  trailing-comments-without-format.in.bib  trailing-comments-without-format.out.bib
