[package]
name = "bibtex-format"
categories = ["command-line-utilities", "parser-implementations"]
description = "CLI bibtex formatter"
edition = "2021"
keywords = ["bibtex", "latex", "tex", "formatter"]
license = "MIT"
repository = "https://github.com/gpauloski/bibtex-formatter"
version = "0.1.0"

[[bin]]
name = "bibtex-format"
path = "src/main.rs"

[lib]
name = "bibtex_format"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }

[dev-dependencies]
test-case = "3.3.1"

[lints.clippy]
cargo = "warn"
complexity = "warn"
correctness = "deny"
nursery = "warn"
# pedantic = "warn"
perf = "deny"
# restriction = "deny"
style = "deny"
suspicious = "warn"
